# oltp-to-olap-showcase

./: .env.example  .gitignore  .npmrc  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DOCS.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  package.json  pnpm-lock.yaml  tsconfig.json
apps/drizzle-example/: Makefile  README.md  docker-compose.dev.override.yaml  docker-compose.oltp.yaml  init-postgres.sh  package.json  (+2 more)
apps/sqlalchemy-example/: .gitignore  CODEGEN.md  QUICK_START.md  README.md  SETUP_SUMMARY.md  codegen  docker-compose.dev.override.yaml  docker-compose.oltp.yaml  init-postgres.sh  moose.config.toml  pyproject.toml  redpanda-connect.yaml  setup.py  start-oltp.sh  test_type_safety.py
apps/sqlalchemy-example/app/: index.ts  main.py  models.ts  sinkTables.ts  sinkTopics.ts  transformations.ts
apps/sqlalchemy-example/app/models/: __init__.py
apps/sqlalchemy-example/app/sinks/: tables.py  topics.py
apps/sqlalchemy-example/app/sources/: __init__.py  externalTopics.ts  external_topics.py
apps/sqlalchemy-example/app/transformations/: __init__.py
apps/sqlalchemy-example/docs/: SQLALCHEMY_TO_OLAP_GUIDE.md  TYPE_SAFETY_SOLUTION.md
apps/sqlalchemy-example/src/: __init__.py  main.py  schemas.py
apps/sqlalchemy-example/src/models/: __init__.py  base.py  customer.py  order.py  order_item.py  product.py
apps/sqlalchemy-example/src/utils/: codegen.py  schema_generator.py
archive/: API.md  ARCHITECTURE.md  MIGRATION_GUIDE.md  SETUP.md
docs/: README.md  docker-guide.md  quickstart.md  test-client.md
templates/: Makefile  README.md  docker-compose.yaml  setup.sh
(+180 files in other folders)
